--- a/BasicRayTracer/BasicRayTracer.vcxproj
+++ b/BasicRayTracer/BasicRayTracer.vcxproj
@@ -135,7 +135,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Core\Camera.h" />
+    <ClInclude Include="src\Core\HittableList.h" />
+    <ClInclude Include="src\Core\Core.h" />
+    <ClInclude Include="src\Core\Sphere.h" />
+    <ClInclude Include="src\Core\Hittable.h" />
     <ClInclude Include="src\Core\Ray.h" />
+    <ClInclude Include="src\Core\Utility.h" />
     <ClInclude Include="vendor\glm\glm\common.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_features.hpp" />
     <ClInclude Include="vendor\glm\glm\detail\_fixes.hpp" />
@@ -554,6 +560,9 @@
     <ClInclude Include="vendor\stb_image\stb_image_write.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Core\Camera.cpp" />
+    <ClCompile Include="src\Core\HittableList.cpp" />
+    <ClCompile Include="src\Core\Sphere.cpp" />
     <ClCompile Include="src\Core\Ray.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="vendor\stb_image\stb_image_write.cpp" />
