--- a/BasicRayTracer/BasicRayTracer.vcxproj.filters
+++ b/BasicRayTracer/BasicRayTracer.vcxproj.filters
@@ -1273,6 +1273,12 @@
       <Filter>stb_image</Filter>
     </ClInclude>
     <ClInclude Include="src\Core\Ray.h" />
+    <ClInclude Include="src\Core\Hittable.h" />
+    <ClInclude Include="src\Core\Sphere.h" />
+    <ClInclude Include="src\Core\Core.h" />
+    <ClInclude Include="src\Core\HittableList.h" />
+    <ClInclude Include="src\Core\Utility.h" />
+    <ClInclude Include="src\Core\Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="vendor\stb_image\stb_image_write.cpp">
@@ -1280,5 +1286,8 @@
     </ClCompile>
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Core\Ray.cpp" />
+    <ClCompile Include="src\Core\Sphere.cpp" />
+    <ClCompile Include="src\Core\HittableList.cpp" />
+    <ClCompile Include="src\Core\Camera.cpp" />
   </ItemGroup>
 </Project>
