Added metal and dialectric materials, refraction, depth of dield

--- a/BasicRayTracer/BasicRayTracer.vcxproj
+++ b/BasicRayTracer/BasicRayTracer.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Core\Material.h" />
     <ClInclude Include="src\Core\Camera.h" />
     <ClInclude Include="src\Core\HittableList.h" />
     <ClInclude Include="src\Core\Core.h" />
@@ -562,8 +563,10 @@
   <ItemGroup>
     <ClCompile Include="src\Core\Camera.cpp" />
     <ClCompile Include="src\Core\HittableList.cpp" />
+    <ClCompile Include="src\Core\Material.cpp" />
     <ClCompile Include="src\Core\Sphere.cpp" />
     <ClCompile Include="src\Core\Ray.cpp" />
+    <ClCompile Include="src\Core\Utility.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="vendor\stb_image\stb_image_write.cpp" />
   </ItemGroup>
